=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.1
 - Fixed: [ 2685597 ] Missing underline for Preferred Name on Personal Details page (canajun2eh)
 - Added: [ 2684836 ] Files created with sitemap give an error on Google (borkhuis/wooc)
 - Changed: improved user interface for adding new fact from clipboard (canajun2eh)
 - Fixed: [ 2672126 ] Media Highlight/Thumb selectors not shown to editing users (canajun2eh)
 - Fixed: Log Error: admin - ERROR 8: Undefined index: small; (windmillway)
 - Changed: removed superfluous "add unlinked note" link on notelist.php page (windmillway)
 - Changed: removed superfluous "add unlinked note/source" link on find.php pop-up (windmillway)
 - Fixed: Minimal and Wood Themes not appearing in Change Theme Dropdown list (windmillway)
 - Fixed: Corrected Tag exclusion on Filtering when finding Shared Notes (Thanks Greg) (windmillway)
 - Fixed: Enabled Filtering when finding Shared Notes (Find.php) (Just a pending email to Greg on tag exclusion) (windmillway)
 - Fixed: Error to $factarray caused by previous update svn5132 (windmillway)
 - Added: Admin page, Add "unlinked note" and reorganised sections.(Thanks for the code Nigel). Added: various Help Texts for Shared Notes. (windmillway)
 - Changed: added missing Shared Note icon references to Xenea Theme (windmillway)
 - Added: Sour Tag for shared Notes on note.php page(windmillway)
 - Added: Shared Notes (or Linked Notes) support (windmillway)
 - Fixed: [ 2637256 ] Extended Relatives Report Header Overwritten (wooc)
 - Fixed: [ 2639453 ] Place check indicating X is difficult to tell the colour (fisharebest)
 - Changed: Add option to sort Manage Media list and MultiMedia list (canajun2eh)
 - Fixed: [ 2612938 ] 4.2.1 svn rev.5059 - Translation error (fisharebest)